--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,6 +6,7 @@ log4j.appender.file=org.apache.log4j.FileAppender
 log4j.appender.file.File=./log/log.log
 
 # Define the layout for file appender
+log4j.appender.file.Append=false
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.conversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
